# dmarc-metrics-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  Dockerfile  LICENSE  README.rst  compose.yml  dmarc-aggregate-report-0.1.xsd  dmarc-aggregate-report-2.0.xsd  dmarc-aggregate-report.xsd  docker-entrypoint.sh  docker-publish.yml  generate-dataclasses-from-xsd.sh  pylintrc  pyproject.toml
.github/actions/check-prerelease/: action.yml  check_prerelease.py
.github/actions/get-latest-release/: action.yml  get_latest_release.py
.github/actions/setup-project/: action.yml
.github/workflows/: ci.yml  docker-publish.yml
config/: dmarc-metrics-exporter.grafana.sample.json  dmarc-metrics-exporter.sample.json
dmarc_metrics_exporter/: __main__.py  app.py  deserialization.py  dmarc_event.py  dmarc_metrics.py  expiring_set.py  imap_client.py  imap_parser.py  imap_queue.py  logging.py  metrics_persister.py  prometheus_exporter.py  smtp_client.py
dmarc_metrics_exporter/model/: __init__.py  dmarc_aggregate_report.py
dmarc_metrics_exporter/model/dmarc_0_1/: __init__.py  dmarc_aggregate_report.py
dmarc_metrics_exporter/model/dmarc_2_0/: __init__.py  dmarc_aggregate_report_2_0.py
dmarc_metrics_exporter/model/tests/: sample_data.py  sample_data_0_1.py  sample_data_2_0.py  test_deserialization.py
dmarc_metrics_exporter/tests/: conftest.py  sample_emails.py  test_app.py  test_deserialization.py  test_dmarc_metrics.py  test_e2e.py  test_expiring_set.py  test_imap_client.py  test_imap_parser.py  test_imap_queue.py  test_logging.py  test_metrics_persister.py  test_prometheus_exporter.py
roles/: README.rst
roles/dmarc-metrics-exporter/defaults/: main.yml
roles/dmarc-metrics-exporter/meta/: main.yml
roles/dmarc-metrics-exporter/tasks/: main.yml
roles/dmarc-metrics-exporter/templates/: dmarc-metrics-exporter.json.j2
roles/dmarc_metrics_exporter/defaults/: main.yml
roles/dmarc_metrics_exporter/files/: dmarc-metrics-exporter.service
roles/dmarc_metrics_exporter/handlers/: main.yml
roles/dmarc_metrics_exporter/meta/: main.yml
roles/dmarc_metrics_exporter/tasks/: main.yml
roles/dmarc_metrics_exporter/templates/: dmarc-metrics-exporter.json.j2  dmarc-metrics-exporter.service.j2
